# anime-chart

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  main.py  plot.py  pyproject.toml  requirements.txt
src/anilist_chart/: main.py
